# Advent-2024-CloneMe

./: Cargo.toml  README.md
.github/workflows/: readme-stars.yml
data/examples/: 22-1.txt  24.txt
src/: lib.rs
