[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
nom = "7.1.3"
itertools = "0.13.0"
tinyvec = { version = "1.8.0", features = ["alloc"]}
hashlink = "0.9.1"
rstar = "0.12.2"
num-traits = "0.2.19"
ordered-float = "4.5.0"
strum = { version = "0.26.3", features = ["derive"] }
